array.island.Island.scala.error
Erreur de compilation :
Island:5: error: '<-' expected but ')' found.
  for(x in num){
              ^Island:10: error: illegal start of simple expression
} 
^