array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var a=num(0)
  var nbNiveau=0
  for(x in num){
    if(a<x){nbNiveau=nbNiveau+1}
    a=x
  }
  return nbNiveau
}